[gd_scene load_steps=41 format=2]

[ext_resource path="res://World/Enemies/Slime/Slime.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/Magic/lightning/Shock_Small.png" type="Texture" id=3]
[ext_resource path="res://Assets/Themes/Flash.tres" type="Material" id=7]
[ext_resource path="res://Assets/Images/Enemies/slime.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=14]
radius = 5.0

[sub_resource type="CircleShape2D" id=35]
radius = 13.0384

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../SlimeSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=37]
resource_name = "hit"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../SlimeSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="CircleShape2D" id=39]
radius = 13.0

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 168, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 216, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 264, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 312, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=146]
animations = [ {
"frames": [ SubResource( 145 ), SubResource( 40 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="Animation" id=143]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SlimeHit/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SlimeHit/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=142]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("SlimeHit/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PoisonParticles/P1:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PoisonParticles/P2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PoisonParticles/P3:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SlimeSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=144]
resource_name = "jump forward"
length = 2.0

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 8 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 8 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 8 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 8 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 8 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 8 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 8 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 8 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=147]
animations = [ {
"frames": [ SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ) ],
"loop": false,
"name": "jump",
"speed": 4.0
}, {
"frames": [ SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ) ],
"loop": false,
"name": "jumping",
"speed": 12.0
} ]

[node name="Slime" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 14 )

[node name="PoisonParticles" type="Node2D" parent="."]
position = Vector2( 0, -15 )

[node name="P3" type="CPUParticles2D" parent="PoisonParticles"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
emitting = false
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 12, 4 )
direction = Vector2( -1, 0 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.8
scale_amount = 4.0
scale_amount_random = 0.7
color = Color( 0, 0.332031, 0, 1 )

[node name="P2" type="CPUParticles2D" parent="PoisonParticles"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
emitting = false
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 32, 4 )
direction = Vector2( -1, 0 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.8
scale_amount = 4.0
scale_amount_random = 0.7
color = Color( 0.145098, 0.545098, 0.145098, 1 )

[node name="P1" type="CPUParticles2D" parent="PoisonParticles"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
emitting = false
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 32, 4 )
direction = Vector2( -1, 0 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.8
scale_amount = 4.0
scale_amount_random = 0.7
color = Color( 0.14902, 0.937255, 0.14902, 1 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 262400
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 35 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HurtBox"]
anims/RESET = SubResource( 36 )
anims/hit = SubResource( 37 )

[node name="SlimeHit" type="Area2D" parent="."]
position = Vector2( 0, -15 )
rotation = 1.5708
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlimeHit"]
position = Vector2( 10, -3.62396e-05 )
shape = SubResource( 39 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -1, 2 )
scale = Vector2( 8.6, 7.1 )

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="FrozenTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="StunnedTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="PoisonTimer" type="Timer" parent="Timers"]
wait_time = 8.0
one_shot = true

[node name="JumpDelay" type="Timer" parent="Timers"]
one_shot = true

[node name="Electricity" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1.22, 1.22, 1.22, 1 )
position = Vector2( 0, -15 )
scale = Vector2( 2, 2 )
frames = SubResource( 146 )
frame = 5
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 143 )
anims/death = SubResource( 142 )
"anims/jump forward" = SubResource( 144 )

[node name="Tween" type="Tween" parent="."]

[node name="SlimeSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0, 1, 0, 1 )
material = ExtResource( 7 )
position = Vector2( 0, -10 )
scale = Vector2( 2, 2 )
frames = SubResource( 147 )
animation = "idle"
playing = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timers/FrozenTimer" to="." method="_on_FrozenTimer_timeout"]
[connection signal="timeout" from="Timers/StunnedTimer" to="." method="_on_StunnedTimer_timeout"]
[connection signal="timeout" from="Timers/PoisonTimer" to="." method="_on_PoisonTimer_timeout"]
[connection signal="timeout" from="Timers/JumpDelay" to="." method="_on_JumpDelay_timeout"]
